--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="title" content="" />
     <meta name="description" content=" " />
     <meta name="keywords" content="" />
-    <title>Vintag$Brokers | Login</title>
-    <link rel="stylesheet" href="/dist/css/index.css" />
+    <title> Vintag$Brokers | Login</title>
+    <link rel="stylesheet" href="/dist/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -18,4 +18,40 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
+</html>
+<body>
+    <header class="navbar navbar-expand-lg sticky-top">
+      <div class="container bg-primary">
+        <a href="index.html" class="navbar-brand d-flex align-items-center rounded-circle"
+          ><img
+            src="/images/Vintagebrokers.logo.jpg"
+            alt="Pokétown Logo"
+            width="70"
+          />VintageBrokers</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target=".navbar-collapse"
+          aria-label="Toggle Navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link d-none" href="#">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link d-none" href="#">Feed</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-secondary" href="/contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
+</body>
 </html>
