--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
 <body>
     <header class="navbar navbar-expand-lg sticky-top">
       <div class="container bg-primary">
-        <a href="index.html" class="navbar-brand d-flex align-items-center rounded-circle"
+        <a href="index.html" class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1 "
           ><img
             src="/images/Vintagebrokers.logo.jpg"
             alt="Pokétown Logo"
-            width="70"
-          />VintageBrokers</a
+            width="100"
+            class="rounded-circle"
+            style="margin-right: 10px;"
+          />Vintage$Brokers</a
         >
         <button
           class="navbar-toggler"
@@ -36,15 +38,15 @@
           data-bs-target=".navbar-collapse"
           aria-label="Toggle Navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon" ></span>
         </button>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link d-none" href="#">Profile</a>
+              <a class="nav-link text-secondary" href="#">Register</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link d-none" href="#">Feed</a>
+              <a class="nav-link text-secondary " href="#">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-secondary" href="/contact.html">Contact</a>
@@ -53,5 +55,84 @@
         </div>
       </div>
     </header>
+    <main >
+        <h1 class=" text-center p-3">Embrace The Extraordinary</h1>
+        <div id="carouselExampleCaptions" class="carousel container-fluid slide mb-1" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/images/carousel-image-2.avif" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h2 class="text-white bg-primary bg-opacity-50">Watches</h2>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/images/carousel-image-3.avif" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h2 class=" text-white bg-primary bg-opacity-50">Men</h2>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/images/carousel-image-4.avif" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h2 class=" text-white bg-primary bg-opacity-50">Women</h2>
+                  </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    <div class="container-fluid text-center text-primary">
+        <div class="masthead bg-image vh-50">
+          <div class="row h-100 justify-content-center">
+            <div class="col-lg-4 col-md-6 col-sm-8">
+              <form
+                id="loginForm"
+                method="post"
+                class="needs-validation was-validated mb-3"
+              >
+                <h3 class="text-primary  mt-3">Please log in</h3>
+                <div class="form-floating mb-2 border border-2 border-info">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="userEmail"
+                    name="email"
+                    placeholder="E-mail"
+                    required
+                  />
+                  <label for="email">Email</label>
+                </div>
+                <div class="form-floating border border-2 border-info">
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="userPassword"
+                    name="password"
+                    placeholder="Password"
+                    required
+                    minlength="8"
+                  />
+                  <label for="password">Password</label>
+                </div>
+                <button type="submit" class="btn btn-primary text-secondary   btn-lg mt-3">
+                  Login
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+    </div>
+      </main>
 </body>
 </html>
