--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </button>
           </div>
     <div class="container-fluid text-center text-primary">
-        <div class="masthead bg-image vh-50">
+        <div class="masthead bg-image">
           <div class="row h-100 justify-content-center">
             <div class="col-lg-4 col-md-6 col-sm-8">
               <form
