--- a/index.html
+++ b/index.html
@@ -57,40 +57,42 @@
     <main >
         <h1 class=" text-center p-3">Embrace The Extraordinary</h1>
         <div id="carouselExampleCaptions" class="carousel container-fluid slide mb-1" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="/images/carousel-image-2.avif" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h2 class="text-white bg-primary bg-opacity-50">Watches</h2>
+            <div id="myCustomCarousel" class="carousel container-fluid slide mb-1" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#myCustomCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#myCustomCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#myCustomCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/images/carousel-image-3.avif" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h2 class=" text-white bg-primary bg-opacity-50">Men</h2>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="/images/carousel-image-2.avif" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h2 class="text-white bg-primary bg-opacity-50">Watches</h2>
+                    </div>
                   </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/images/carousel-image-4.avif" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h2 class=" text-white bg-primary bg-opacity-50">Women</h2>
+                  <div class="carousel-item">
+                    <img src="/images/carousel-image-3.avif" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h2 class="text-white bg-primary bg-opacity-50">Men</h2>
+                    </div>
                   </div>
+                  <div class="carousel-item">
+                    <img src="/images/carousel-image-4.avif" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h2 class="text-white bg-primary bg-opacity-50">Women</h2>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#myCustomCarousel" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#myCustomCarousel" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
               </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+              
     <div class="container-fluid text-center text-primary">
         <div class="masthead bg-image">
           <div class="row h-100 justify-content-center align-items-center">
