--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <span class="navbar-toggler-icon" ></span>
         </button>
         <div class="collapse navbar-collapse">
-          <ul class="navbar-nav ms-auto me-1-sm float-end">
+          <ul class="navbar-nav ms-auto me-1-sm float-end fs-5">
             <li class="nav-item">
               <a class="nav-link text-secondary" href="#">Register</a>
             </li>
@@ -65,19 +65,25 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/images/carousel-image-2.avif" class="d-block w-100" alt="...">
+                    <a href="#">
+                        <img src="/images/carousel-image-2.avif" class="d-block w-100" alt="Image of a luxurious watch">
+                    </a>
                     <div class="carousel-caption d-none d-md-block">
                       <h2 class="text-white bg-primary bg-opacity-50">Watches</h2>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="/images/carousel-image-3.avif" class="d-block w-100" alt="...">
+                    <a href="#">
+                        <img src="/images/carousel-image-3.avif" class="d-block w-100" alt="...">
+                    </a>
                     <div class="carousel-caption d-none d-md-block">
                       <h2 class="text-white bg-primary bg-opacity-50">Men</h2>
                     </div>
                   </div>
-                  <div class="carousel-item">
+                  <a href="#">
+                    <div class="carousel-item">
                     <img src="/images/carousel-image-4.avif" class="d-block w-100" alt="...">
+                </a>
                     <div class="carousel-caption d-none d-md-block">
                       <h2 class="text-white bg-primary bg-opacity-50">Women</h2>
                     </div>
@@ -132,9 +138,16 @@
               </form>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6">
-                <p class="fs-1">Not a member?</p>
-                <p>Register Here or continue as Guest</p>
-              </div>
+                <div class="justify-content-center p-3 ms-5">
+                    <p class="fs-1">Not a member?</p>
+                    <p class="fs-3">
+                      Register
+                      <a href="#" class="text-info fs-1 text-decoration-underline">Here</a>
+                      or continue as
+                      <a href="#" class="text-info fs-1 text-decoration-underline">Guest</a>
+                    </p>
+                  </div>
+                  
           </div>
         </div>
     </div>
