--- a/register.html
+++ b/register.html
@@ -45,12 +45,14 @@
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto me-1-sm float-end fs-5">
           <li class="nav-item">
-            <a class="nav-link text-secondary active" href="register.html"
+            <a
+              class="nav-link text-secondary text-decoration-underline active"
+              href="register.html"
               >Register</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary fw-light" href="#">About</a>
+            <a class="nav-link text-secondary fw-lighter" href="#">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-secondary" href="/contact.html">Contact</a>
