--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto me-1-sm float-end fs-5">
             <li class="nav-item">
-              <a class="nav-link text-secondary" href="#">Register</a>
+              <a class="nav-link text-secondary" href="register.html">Register</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-secondary " href="#">About</a>
