--- a/index.html
+++ b/index.html
@@ -59,68 +59,68 @@
         <div id="carouselExampleCaptions" class="carousel container-fluid slide mb-1" data-bs-ride="carousel">
             <div id="myCustomCarousel" class="carousel container-fluid slide mb-1" data-bs-ride="carousel">
                 <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#myCustomCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#myCustomCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#myCustomCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#myCustomCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#myCustomCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#myCustomCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
+                    <div class="carousel-item active">
                     <a href="#">
                         <img src="/images/carousel-image-2.avif" class="d-block w-100" alt="Image of a luxurious watch">
                     </a>
                     <div class="carousel-caption d-none d-md-block">
-                      <h2 class="text-white bg-primary bg-opacity-50">Watches</h2>
+                        <h2 class="text-white bg-primary bg-opacity-50">Watches</h2>
                     </div>
-                  </div>
-                  <div class="carousel-item">
+                    </div>
+                    <div class="carousel-item">
                     <a href="#">
                         <img src="/images/carousel-image-3.avif" class="d-block w-100" alt="...">
                     </a>
                     <div class="carousel-caption d-none d-md-block">
-                      <h2 class="text-white bg-primary bg-opacity-50">Men</h2>
+                        <h2 class="text-white bg-primary bg-opacity-50">Men</h2>
                     </div>
-                  </div>
-                  <a href="#">
+                    </div>
+                    <a href="#">
                     <div class="carousel-item">
                     <img src="/images/carousel-image-4.avif" class="d-block w-100" alt="...">
                 </a>
                     <div class="carousel-caption d-none d-md-block">
-                      <h2 class="text-white bg-primary bg-opacity-50">Women</h2>
+                        <h2 class="text-white bg-primary bg-opacity-50">Women</h2>
                     </div>
-                  </div>
+                    </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#myCustomCarousel" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#myCustomCarousel" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
                 </button>
-              </div>            
+                </div>            
     <div class="container-fluid text-center text-primary">
         <div class="masthead bg-image">
-          <div class="row h-100 justify-content-center align-items-center">
+            <div class="row h-100 justify-content-center align-items-center">
             <div class="col-lg-4 col-md-6 col-sm-8">
                 <h3 class="text-primary fs-2">Please log in</h3>
-              <form
+                <form
                 id="loginForm"
                 method="post"
                 class="needs-validation was-validated mb-3 "
-              >
+                >
                 <div class="form-floating mb-2 border border-2 border-info ">
-                  <input
+                    <input
                     type="text"
                     class="form-control"
                     id="userEmail"
                     name="email"
                     placeholder="E-mail"
                     required
-                  />
-                  <label for="email">Email</label>
+                    />
+                    <label for="email">Email</label>
                 </div>
                 <div class="form-floating border border-2 border-info">
-                  <input
+                    <input
                     type="password"
                     class="form-control"
                     id="userPassword"
@@ -128,28 +128,40 @@
                     placeholder="Password"
                     required
                     minlength="8"
-                  />
-                  <label for="password">Password</label>
+                    />
+                    <label for="password">Password</label>
                 </div>
-                <button type="submit" class="btn btn-primary text-secondary btn-lg mt-3">
-                  Login
+                <div class="d-grid gap-2  col-6 mx-auto">
+                <button type="submit" class="btn btn-primary btn-lg border border-info border-3 text-white btn-lg mt-3">
+                    Login
                 </button>
-              </form>
+            </div>
+                </form>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="justify-content-center p-3 ms-5">
                     <p class="fs-1">Not a member?</p>
                     <p class="fs-3">
-                      Register
-                      <a href="#" class="text-info fs-1 text-decoration-underline">Here</a>
-                      or continue as
-                      <a href="#" class="text-info fs-1 text-decoration-underline">Guest</a>
+                        Register
+                        <a href="#" class="text-info fs-1 text-decoration-underline">Here</a>
+                        or continue as
+                        <a href="#" class="text-info fs-1 text-decoration-underline">Guest</a>
                     </p>
-                  </div>
-                  
-          </div>
+                </div> 
+            </div>
         </div>
     </div>
-      </main>
+    </main>
+    <footer class="container-fluid bg-success bg-opacity-25 mt-1">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid justify-content-evenly align-items-center fs-5 p-5">
+                <ul class="navbar-nav fs-2">
+                    <li class="nav-item mx-5"><a class="nav-link" href="#about-us">Register</a></li>
+                    <li class="nav-item mx-5 "><a class="nav-link" href="#register">About Us</a></li>
+                    <li class="nav-item mx-5"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </footer>
 </body>
 </html>
