--- a/register.html
+++ b/register.html
@@ -18,47 +18,69 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
-</html>
-<body>
-  <header class="navbar navbar-expand-lg sticky-top">
-    <div class="container bg-primary">
-      <a
-        href="index.html"
-        class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
-        ><img
-          src="/images/Vintagebrokers.logo.jpg"
-          alt="Pokétown Logo"
-          width="100"
-          class="rounded-circle p-1"
-        />
-        <span class="d-sm-inline d-none">Vintage$Brokers</span></a
-      >
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target=".navbar-collapse"
-        aria-label="Toggle Navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav ms-auto me-1-sm float-end fs-5">
-          <li class="nav-item">
-            <a
-              class="nav-link text-secondary text-decoration-underline active"
-              href="register.html"
-              >Register</a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-secondary fw-lighter" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-secondary" href="/contact.html">Contact</a>
-          </li>
-        </ul>
+  <body>
+    <header class="navbar navbar-expand-lg sticky-top">
+      <div class="container bg-primary">
+        <a
+          href="index.html"
+          class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
+          ><img
+            src="/images/Vintagebrokers.logo.jpg"
+            alt="Pokétown Logo"
+            width="100"
+            class="rounded-circle p-1"
+          />
+          <span class="d-sm-inline d-none">Vintage$Brokers</span></a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target=".navbar-collapse"
+          aria-label="Toggle Navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav ms-auto me-1-sm float-end fs-5">
+            <li class="nav-item">
+              <a
+                class="nav-link text-secondary text-decoration-underline active"
+                href="register.html"
+                >Register</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-secondary fw-lighter" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-secondary" href="/contact.html"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </header>
-</body>
+    </header>
+    <main></main>
+    <footer class="container-fluid bg-success bg-opacity-25 mt-1">
+      <nav class="navbar navbar-expand-lg">
+        <div
+          class="container-fluid justify-content-evenly align-items-center fs-5 p-5"
+        >
+          <ul class="navbar-nav fs-2">
+            <li class="nav-item mx-5">
+              <a class="nav-link" href="#about-us">Register</a>
+            </li>
+            <li class="nav-item mx-5">
+              <a class="nav-link" href="#register">About Us</a>
+            </li>
+            <li class="nav-item mx-5">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </footer>
+  </body>
+</html>
