adding html and style

--- a/index.html
+++ b/index.html
@@ -103,40 +103,46 @@
             <div class="row h-100 justify-content-center align-items-center">
             <div class="col-lg-4 col-md-6 col-sm-8">
                 <h3 class="text-primary fs-2">Please log in</h3>
-                <form
-                id="loginForm"
-                method="post"
-                class="needs-validation was-validated mb-3 "
-                >
-                <div class="form-floating mb-2 border border-2 border-info ">
-                    <input
-                    type="text"
-                    class="form-control"
-                    id="userEmail"
-                    name="email"
-                    placeholder="E-mail"
-                    required
-                    />
-                    <label for="email">Email</label>
-                </div>
-                <div class="form-floating border border-2 border-info">
-                    <input
-                    type="password"
-                    class="form-control"
-                    id="userPassword"
-                    name="password"
-                    placeholder="Password"
-                    required
-                    minlength="8"
-                    />
-                    <label for="password">Password</label>
-                </div>
-                <div class="d-grid gap-2  col-6 mx-auto">
-                <button type="submit" class="btn btn-primary btn-lg border border-info border-3 text-white btn-lg mt-3">
-                    Login
-                </button>
-            </div>
-                </form>
+                <form id="loginForm" method="post" class="needs-validation mb-3">
+                    <div class="form-floating mb-3">
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="userEmail"
+                        name="email"
+                        placeholder="E-mail"
+                        required
+                      />
+                      <label for="userEmail">Email</label>
+                      <div class="invalid-feedback text-danger">
+                        Please enter a valid email address.
+                      </div>
+                    </div>
+                    <div class="form-floating">
+                      <input
+                        type="password"
+                        class="form-control"
+                        id="userPassword"
+                        name="password"
+                        placeholder="Password"
+                        required
+                        minlength="8"
+                      />
+                      <label for="userPassword">Password</label>
+                      <div class="invalid-feedback">
+                        Password must be at least 8 characters long.
+                      </div>
+                    </div>
+                    <div class="d-grid gap-2 col-6 mx-auto">
+                      <button
+                        type="submit"
+                        class="btn btn-primary btn-lg border border-info border-3 text-white btn-lg mt-3"
+                      >
+                        Login
+                      </button>
+                    </div>
+                  </form>
+                  
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="justify-content-center p-3 ms-5">
@@ -153,15 +159,32 @@
     </div>
     </main>
     <footer class="container-fluid bg-success bg-opacity-25 mt-1">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid justify-content-evenly align-items-center fs-5 p-5">
-                <ul class="navbar-nav fs-2">
-                    <li class="nav-item mx-5"><a class="nav-link" href="#about-us">Register</a></li>
-                    <li class="nav-item mx-5 "><a class="nav-link" href="#register">About Us</a></li>
-                    <li class="nav-item mx-5"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
+        <div class="row">
+       
+        </div>
+        <div class="row align-items-center">
+            <div class="col-md-6">
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid justify-content-evenly fs-5 p-5">
+                    <ul class="navbar-nav fs-2">
+                        <li class="nav-item mx-5"><a class="nav-link" href="#about-us">Register</a></li>
+                        <li class="nav-item mx-5 "><a class="nav-link" href="#register">About Us</a></li>
+                        <li class="nav-item mx-5"><a class="nav-link" href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <div class="col-md-6">
+            <p class=" fs-2 text-center">Get Social With US</p>
+            <div class="d-flex flex-row justify-content-center gap-5"> 
+                 <i class="fa-brands fa-facebook fs-1 text-info "></i>
+                 <i class="fa-brands fa-square-instagram text-danger fs-1"></i>
+                <i class="fa-brands fa-twitter fs-1 text-info"></i>
+                <i class="fa-brands fa-linkedin fs-1 text-dark"></i>
             </div>
-        </nav>
+        </div>
+        <p class="text-end">Vintage$Brokers 2023</p>
+    </div>
     </footer>
 </body>
 </html>
