--- a/register.html
+++ b/register.html
@@ -135,23 +135,36 @@
       </div>
     </main>
     <footer class="container-fluid bg-success bg-opacity-25 mt-1">
-      <nav class="navbar navbar-expand-lg">
-        <div
-          class="container-fluid justify-content-evenly align-items-center fs-5 p-5"
-        >
-          <ul class="navbar-nav fs-2">
-            <li class="nav-item mx-5">
-              <a class="nav-link" href="#about-us">Register</a>
-            </li>
-            <li class="nav-item mx-5">
-              <a class="nav-link" href="#register">About Us</a>
-            </li>
-            <li class="nav-item mx-5">
-              <a class="nav-link" href="#contact">Contact</a>
-            </li>
-          </ul>
+      <div class="row"></div>
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid justify-content-evenly fs-5 p-3">
+              <ul class="navbar-nav fs-2">
+                <li class="nav-item mx-5">
+                  <a class="nav-link" href="#about-us">Register</a>
+                </li>
+                <li class="nav-item mx-5">
+                  <a class="nav-link" href="#register">About Us</a>
+                </li>
+                <li class="nav-item mx-5">
+                  <a class="nav-link" href="#contact">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
         </div>
-      </nav>
+        <div class="col-md-6">
+          <p class="fs-2 text-center">Get Social With US</p>
+          <div class="d-flex flex-row justify-content-center gap-5">
+            <i class="fa-brands fa-facebook fs-1 text-info"></i>
+            <i class="fa-brands fa-square-instagram text-danger fs-1"></i>
+            <i class="fa-brands fa-twitter fs-1 text-info"></i>
+            <i class="fa-brands fa-linkedin fs-1 text-dark"></i>
+          </div>
+        </div>
+        <p class="text-center mt-1">Vintage$Brokers 2023</p>
+      </div>
     </footer>
   </body>
 </html>
