adding html and style

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
               <a class="nav-link text-secondary" href="register.html">Register</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-secondary " href="#">About</a>
+              <a class="nav-link text-secondary " href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-secondary" href="/contact.html">Contact</a>
+              <a class="nav-link text-secondary" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -167,8 +167,8 @@
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid justify-content-evenly fs-5 p-5">
                     <ul class="navbar-nav fs-2">
-                        <li class="nav-item mx-5"><a class="nav-link" href="#about-us">Register</a></li>
-                        <li class="nav-item mx-5 "><a class="nav-link" href="#register">About Us</a></li>
+                        <li class="nav-item mx-5"><a class="nav-link" href="register.html">Register</a></li>
+                        <li class="nav-item mx-5 "><a class="nav-link" href="about.html">About Us</a></li>
                         <li class="nav-item mx-5"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
