adding html and style

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="title" content="" />
     <meta name="description" content=" " />
     <meta name="keywords" content="" />
-    <title>Vintag$Brokers | Register</title>
+    <title>Vintag$Brokers | About Us</title>
     <link rel="stylesheet" href="/dist/css/styles.css" />
     <link
       rel="stylesheet"
@@ -44,96 +44,25 @@
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto me-1-sm float-end fs-5">
             <li class="nav-item">
-              <a
-                class="nav-link text-secondary text-decoration-underline active"
-                href="register.html"
+              <a class="nav-link text-secondary" href="register.html"
                 >Register</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-secondary fw-lighter" href="#">About</a>
+              <a
+                class="nav-link text-secondary text-decoration-underline active"
+                href="about.html"
+                >About</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-secondary" href="/contact.html"
-                >Contact</a
-              >
+              <a class="nav-link text-secondary" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </header>
-    <main>
-      <h1 class="text-center p-3">Register</h1>
-      <div class="container-fluid text-center">
-        <div class="row justify-content-center align-items-center gap-5">
-          <div class="col-md-4">
-            <form
-              id="registerForm"
-              action="https://api.noroff.dev/api/v1/social/auth/register"
-              method="post"
-              class="needs-validation"
-              enctype="multipart/form-data"
-            >
-              <div class="mb-3 fs-4">
-                <label for="userName" class="form-label wider-border"
-                  >Username</label
-                >
-                <input
-                  type="text"
-                  class="form-control border border-info"
-                  id="userName"
-                  name="name"
-                  required
-                />
-                <div class="invalid-feedback">Please enter a username.</div>
-              </div>
-              <div class="mb-3 fs-4">
-                <label for="userEmail" class="form-label wider-border"
-                  >E-mail</label
-                >
-                <input
-                  type="email"
-                  class="form-control border border-info"
-                  id="userEmail"
-                  name="email"
-                  aria-describedby="emailHelp"
-                  required
-                />
-                <div id="emailHelp" class="form-text fs-6">
-                  Noroff email required.
-                </div>
-                <div class="invalid-feedback">
-                  Please enter a valid email address.
-                </div>
-              </div>
-              <div class="mb-3 fs-4">
-                <label for="userPassword" class="form-label wider-border"
-                  >Password</label
-                >
-                <input
-                  type="password"
-                  class="form-control border border-info"
-                  id="userPassword"
-                  name="password"
-                  minlength="8"
-                  required
-                />
-                <div class="invalid-feedback">
-                  Password must be at least 8 characters long.
-                </div>
-              </div>
-              <button
-                type="submit"
-                class="btn btn-primary btn-lg border border-info border-3 text-white btn-lg mt-3"
-              >
-                Register
-              </button>
-            </form>
-          </div>
-          <div class="col-md-6 register-img"></div>
-        </div>
-      </div>
-    </main>
+    <main></main>
     <footer class="container-fluid bg-success bg-opacity-25 mt-1">
       <div class="row"></div>
       <div class="row align-items-center">
