--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="title" content="" />
     <meta name="description" content=" " />
     <meta name="keywords" content="" />
-    <title>Vintag$Brokers | Register</title>
+    <title>Vintag$Brokers | About Us</title>
     <link rel="stylesheet" href="/dist/css/styles.css" />
     <link
       rel="stylesheet"
@@ -44,25 +44,100 @@
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto me-1-sm float-end fs-5">
             <li class="nav-item">
-              <a
-                class="nav-link text-secondary text-decoration-underline active"
-                href="register.html"
+              <a class="nav-link text-secondary" href="register.html"
                 >Register</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-secondary fw-lighter" href="#">About</a>
+              <a
+                class="nav-link text-secondary text-decoration-underline active"
+                href="about.html"
+                >About</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-secondary" href="/contact.html"
-                >Contact</a
-              >
+              <a class="nav-link text-secondary" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <h1 class="visually-hidden">About Us</h1>
+      <div class="container-fluid text-center">
+        <div class="about-bg">
+          <div class="container col-md-6 mt-5 bg-success bg-opacity-75 p-4">
+            <h2
+              class="col-md-10 mx-auto mb-1 text-center text-white fs-1 border-bottom border-4 border-secondary"
+            >
+              Welcome to Vintage Brokers, your exclusive gateway to the world of
+              refined luxury.
+            </h2>
+            <p class="fs-5 text-white mt-3">
+              Our esteemed platform is dedicated to curating an extraordinary
+              collection of opulent items, ranging from timeless watches to
+              sumptuous clothing and regal furniture. Each piece we present
+              embodies a rich tapestry of craftsmanship, history, and enduring
+              style.
+            </p>
+            <h2
+              class="col-md-10 mx-auto mb-1 text-center text-white fs-1 border-bottom border-4 border-secondary"
+            >
+              Elegance Unveiled
+            </h2>
+            <p class="fs-5 text-white mt-3">
+              Embark on a journey through our curated watch collection, a
+              symphony of precision and sophistication. Picture yourself adorned
+              with a vintage Rolex, echoing tales of exploration, or savor the
+              allure of a Patek Philippe, a testament to Swiss watchmaking
+              excellence. These timepieces are not mere accessories; they are
+              treasures that encapsulate the essence of a bygone era.
+            </p>
+            <h2
+              class="col-md-10 mx-auto mb-1 text-center text-white fs-1 border-bottom border-4 border-secondary"
+            >
+              An Odyssey Through Time
+            </h2>
+            <p class="fs-5 text-white mt-3">
+              Step into the world of fashion with our curated offerings that
+              transcend time. Envision yourself draped in the opulence of a
+              Chanel gown from the roaring twenties or clad in the sleek lines
+              of a tailored Brioni suit reminiscent of Hollywood's golden age.
+              These garments are not just clothing; they are threads woven into
+              the fabric of history.
+            </p>
+            <h2
+              class="col-md-10 mx-auto mb-1 text-center text-white fs-1 border-bottom border-4 border-secondary"
+            >
+              Timeless Allure
+            </h2>
+            <p class="fs-5 text-white mt-3">
+              Explore our virtual gallery of furniture, where timeless design
+              takes center stage. From ornate Victorian chairs to mid-century
+              modern masterpieces, each item narrates a unique story of
+              craftsmanship and enduring beauty. Our collection seamlessly
+              blends function with aesthetics, ensuring that every piece is a
+              statement of refined taste.
+            </p>
+            <h2
+              class="col-md-10 mx-auto mb-1 text-center text-white fs-1 border-bottom border-4 border-secondary"
+            >
+              Bid with Distinction
+            </h2>
+            <p class="fs-5 text-white mt-3">
+              Vintage Brokers invites you to partake in an experience that
+              transcends the ordinary. Secure your place at the auction, where
+              enthusiasts converge to bid on the extraordinary. Every lot
+              represents an opportunity to possess a piece of history, a slice
+              of luxury suspended in time. Join us in celebrating the artistry
+              of the past, present, and future. Embrace the allure of vintage
+              luxury at Vintage Brokers, where every bid is a step towards
+              acquiring a piece of everlasting elegance.
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer class="container-fluid bg-success bg-opacity-25 mt-1">
       <div class="row"></div>
       <div class="row align-items-center">
@@ -71,13 +146,13 @@
             <div class="container-fluid justify-content-evenly fs-5 p-3">
               <ul class="navbar-nav fs-2">
                 <li class="nav-item mx-5">
-                  <a class="nav-link" href="#about-us">Register</a>
+                  <a class="nav-link" href="register.html">Register</a>
                 </li>
                 <li class="nav-item mx-5">
-                  <a class="nav-link" href="#register">About Us</a>
+                  <a class="nav-link" href="about.html">About Us</a>
                 </li>
                 <li class="nav-item mx-5">
-                  <a class="nav-link" href="#contact">Contact</a>
+                  <a class="nav-link" href="contact.html">Contact</a>
                 </li>
               </ul>
             </div>
