working on login code

--- a/profile/index.html
+++ b/profile/index.html
@@ -23,7 +23,7 @@
   <header class="navbar navbar-expand-lg sticky-top">
     <div class="container bg-primary">
       <a
-        href="index.html"
+        href="/profile/index.html"
         class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
         ><img
           src="/images/Vintagebrokers.logo.jpg"
@@ -55,7 +55,7 @@
             <a class="nav-link text-secondary" href="/feed/listings.html">Auctions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary" href="index.html">Logout</a>
+            <a class="nav-link text-secondary" href="/index.html">Logout</a>
           </li>
         </ul>
       </div>
@@ -85,13 +85,13 @@
           <div class="container-fluid justify-content-evenly fs-5 p-3">
             <ul class="navbar-nav fs-2">
               <li class="nav-item mx-5">
-                <a class="nav-link" href="register.html">Register</a>
+                <a class="nav-link" href="/register.html">Register</a>
               </li>
               <li class="nav-item mx-5">
-                <a class="nav-link" href="about.html">About Us</a>
+                <a class="nav-link" href="/about.html">About Us</a>
               </li>
               <li class="nav-item mx-5">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="/contact.html">Contact</a>
               </li>
             </ul>
           </div>
