--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/auth/login.js" type="module"></script>
   </head>
 </html>
 <body>
@@ -166,13 +167,13 @@
             <div class="container-fluid justify-content-evenly fs-5 p-3">
               <ul class="navbar-nav fs-2">
                 <li class="nav-item mx-5">
-                  <a class="nav-link" href="register.html">Register</a>
+                  <a class="nav-link" href="/register.html">Register</a>
                 </li>
                 <li class="nav-item mx-5">
-                  <a class="nav-link" href="about.html">About Us</a>
+                  <a class="nav-link" href="/about.html">About Us</a>
                 </li>
                 <li class="nav-item mx-5">
-                  <a class="nav-link" href="contact.html">Contact</a>
+                  <a class="nav-link" href="/contact.html">Contact</a>
                 </li>
               </ul>
             </div>
