registration code complete

--- a/register.html
+++ b/register.html
@@ -70,7 +70,6 @@
           <div class="col-md-4">
             <form
               id="registerForm"
-              action="https://api.noroff.dev/api/v1/social/auth/register"
               method="post"
               class="needs-validation"
               enctype="multipart/form-data"
@@ -124,6 +123,7 @@
                 </div>
               </div>
               <button
+                id="registerButton"
                 type="submit"
                 class="btn btn-primary btn-lg border border-info border-3 text-white btn-lg mt-3"
               >
