--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
                     <p class="fs-1">Not a member?</p>
                     <p class="fs-3">
                         Register
-                        <a href="#" class="text-info fs-1 text-decoration-underline">Here</a>
+                        <a href="/register.html" class="text-info fs-1 text-decoration-underline">Here</a>
                         or continue as
-                        <a href="#" class="text-info fs-1 text-decoration-underline">Guest</a>
+                        <a href="/feed/listings.html" class="text-info fs-1 text-decoration-underline">Guest</a>
                     </p>
                 </div> 
             </div>
