--- a/register.html
+++ b/register.html
@@ -48,12 +48,14 @@
             <li class="nav-item">
               <a
                 class="nav-link text-secondary text-decoration-underline active"
-                href="register.html"
+                href="/register.html"
                 >Register</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-secondary fw-lighter" href="#">About</a>
+              <a class="nav-link text-secondary fw-lighter" href="/about.html"
+                >About</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link text-secondary" href="/contact.html"
@@ -168,5 +170,11 @@
         <p class="text-center mt-1">Vintage$Brokers 2023</p>
       </div>
     </footer>
+    <button
+      class="btn btn-lg btn-primary rounded-circle position-fixed bottom-0 end-0 translate-middle d-none"
+      id="back-to-up"
+    >
+      <i class="fa fa-arrow-up" aria-hidden="true"></i>
+    </button>
   </body>
 </html>
