--- a/profile/index.html
+++ b/profile/index.html
@@ -143,5 +143,11 @@
       </div>
     </div>
   </div>
+  <button
+  class="btn btn-lg btn-primary rounded-circle position-fixed bottom-0 end-0 translate-middle d-none"
+  id="back-to-up"
+>
+  <i class="fa fa-arrow-up" aria-hidden="true"></i>
+</button>
 </body>
 </html>
