working on profile js, building html dynamically

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 <body>
     <header class="navbar navbar-expand-lg sticky-top">
       <div class="container bg-primary">
-        <a href="index.html" class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
+        <a href="index.html"
+        id="redirectLink"
+         class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
           ><img
             src="/images/Vintagebrokers.logo.jpg"
             alt="Pokétown Logo"
