--- a/register.html
+++ b/register.html
@@ -25,6 +25,7 @@
       <div class="container bg-primary">
         <a
           href="index.html"
+          id="redirectLink"
           class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
           ><img
             src="/images/Vintagebrokers.logo.jpg"
