--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
       <div class="container bg-primary">
         <a
           href="index.html"
+          id="redirectLink"
           class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
           ><img
             src="/images/Vintagebrokers.logo.jpg"
