working on profile js, building html

--- a/profile/index.html
+++ b/profile/index.html
@@ -82,6 +82,7 @@
       <div class="col-md-6 d-none d-md-block">
         <div class="bannerImage"></div>
         </div>
+        <div class="profileAuctions"></div>
     </div>
   </main>
 </body>
