fixed redirect code

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <header class="navbar navbar-expand-lg sticky-top">
       <div class="container bg-primary">
-        <a href="index.html"
+        <a href="/index.html"
         id="redirectLink"
          class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
           ><img
@@ -156,7 +156,7 @@
                         Register
                         <a href="/register.html" class="text-info fs-1 text-decoration-underline">Here</a>
                         or continue as
-                        <a href="/feed/listings.html" class="text-info fs-1 text-decoration-underline">Guest</a>
+                        <a href="/feed/index.html" class="text-info fs-1 text-decoration-underline">Guest</a>
                     </p>
                 </div> 
             </div>
