--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <header class="navbar navbar-expand-lg sticky-top">
       <div class="container bg-primary">
         <a
-          href="index.html"
+          href="/index.html"
           id="redirectLink"
           class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
           ><img
