--- a/register.html
+++ b/register.html
@@ -17,14 +17,14 @@
       referrerpolicy="no-referrer"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/utilities/utilities.mjs" type="module"></script>
+    <!-- <script src="/js/utilities/utilities.mjs" type="module"></script> -->
     <script src="/js/api/auth/register.mjs" type="module"></script>
   </head>
   <body>
     <header class="navbar navbar-expand-lg sticky-top">
       <div class="container bg-primary">
         <a
-          href="index.html"
+          href="/index.html"
           id="redirectLink"
           class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
           ><img
