added buttons on auction modals

--- a/profile/index.html
+++ b/profile/index.html
@@ -215,11 +215,18 @@
                           <button
                               type="submit"
                               id="createAuctionButton"
-                              class="btn btn-secondary border border-primary btn-lg mt-2 ml-auto"
+                              class=" mainButton btn btn-secondary border border-primary btn-lg mt-2 ml-auto"
                           >
                               Create Auction
                           </button>
-                      </div>
+                        </button>
+                            <!-- <button
+                                type="submit"
+                                id="deleteAuctionButton"
+                                class=" deleteButton btn btn-danger border border-primary btn-lg mt-2 ml-auto"
+                            >
+                                Delete Auction
+                            </button> -->
                   </form>
               </div>
           </div>
