added delete function

--- a/profile/index.html
+++ b/profile/index.html
@@ -22,6 +22,7 @@
    <script src="/js/api/profile/profileInfo.mjs" type="module"></script>
    <script src="/js/auctions/createAuction.mjs" type="module" defer></script>
    <script src="/js/auctions/editAuctions.mjs" type="module" defer></script>
+   <script src="/js/auctions/deleteAuction.mjs" type="module" defer></script>
   </head>
 <body>
   <header class="navbar navbar-expand-lg sticky-top">
