--- a/profile/index.html
+++ b/profile/index.html
@@ -164,6 +164,7 @@
                               required
                           />
                       </div>
+                    <div id="errorMessage" class="text-danger mt-2 fs-4"></div>
                       <label for="auctionBody" class="form-label text-start mt-2">Body:</label>
                       <textarea
                           class="form-control mt-1 mb-3"
